<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.udacity.projectpopularmovies.MovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Top_Movie_Detail_Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Color_006699"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_64"
                android:paddingEnd="@dimen/size_8"
                android:paddingLeft="@dimen/size_32"
                android:paddingRight="@dimen/size_8"
                android:paddingStart="@dimen/size_32"
                android:paddingTop="@dimen/size_64"
                android:textColor="@color/Color_ffff"
                android:textSize="@dimen/size_32sp"
                tools:text="Title"
                android:layout_weight="4"/>

            <Button
                android:id="@+id/favorite_movies_button"
                android:background="@drawable/no_favorite_movie"
                android:layout_gravity="center"
                android:padding="@dimen/size_12"
                android:layout_width="@dimen/size_64"
                android:layout_height="@dimen/size_64" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_poster"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_24"
                    android:layout_marginStart="@dimen/size_24"
                    android:textAllCaps="true"
                    android:textSize="@dimen/size_32sp"
                    tools:text="RELEASE DATE"

                    />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_24"
                    android:layout_marginStart="@dimen/size_24"
                    android:textAllCaps="true"
                    android:textColor="@color/Color_494949"
                    android:textSize="@dimen/size_16sp"
                    tools:text="MOVIE RATING" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/synopse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/size_16"
            android:textSize="@dimen/size_16sp"
            tools:text="ABOUT THE MOVIE" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/pm_trailer_Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/Color_006699"
                    android:padding="@dimen/size_2"
                    android:text="@string/movie_trailer_text_display"
                    android:textAlignment="center"
                    android:textColor="@color/Color_ffff"
                    android:textSize="@dimen/size_22sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/pm_trailer_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                    <TextView
                        android:visibility="invisible"
                        android:id="@+id/pm_video_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/size_2"
                        android:text="@string/movie_videos_text_not_found"
                        android:textAlignment="center"
                        android:textSize="@dimen/size_22sp" />

                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pm_trailer_Layout"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/Color_006699"
                    android:padding="@dimen/size_2"
                    android:text="@string/movie_review_text_display"
                    android:textAlignment="center"
                    android:textColor="@color/Color_ffff"
                    android:textSize="@dimen/size_22sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/pm_review_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:visibility="invisible"
                        android:id="@+id/pm_review_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/size_2"
                        android:text="@string/movie_review_text_not_found"
                        android:textAlignment="center"
                        android:textSize="@dimen/size_22sp" />

                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
